--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/countdown/jquery.countdown.css">
     <link rel="stylesheet" href="assets/css/main.css">
   </head>
   <body>
@@ -64,17 +65,30 @@
             </span>
           </div><!-- /.hoodie-account-error -->
         </div><!--/hoodieAccountBar -->
+
+        <form action="#">
+          <input type="text" id="pomodoroinput" placeholder="What are you working on?" />
+          <input type='submit' value='Start' class='btn btn-success'>
+        </form>
+
+        <div id="current-wrapper">
+          <h3 class='title'>Empty</h3>
+          <div class="current"></div>
+          <input type="button" id="stop" value='Stop' class='btn btn-primary' />
+        </div>
       </div>
 
       <div class="content">
-        <ul id="pomodorolist"></ul>
 
-        <input type="text" id="pomodoroinput"  placeholder="new pomodoro ↵" />
+        <ul id="pomodorolist"></ul>
       </div>
     </div> <!-- /.container -->
 
     <script src="assets/vendor/jquery-2.1.0.min.js"></script>
     <script src="assets/vendor/bootstrap/bootstrap.js"></script>
+    <script src="assets/vendor/countdown/jquery.plugin.min.js"></script>
+    <script src="assets/vendor/countdown/jquery.countdown.min.js"></script>
+
     <!-- Load the dynamic version of hoodie.js that includes all the plugin code-->
     <script src="/_api/_files/hoodie.js"></script>
 
